manifests/media-apps/overseerr/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: overseerr
  namespace: media-apps
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "5055"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "5055"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: maintainerr
      toPorts:
        - ports:
            - port: "5055"
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
